--- a/components.json
+++ b/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "@/components",
-    "utils": "@/lib/helper",
+    "utils": "@/utils/helper",
     "ui": "@/components/ui",
     "lib": "@/utils",
     "hooks": "@/hooks"
